infra/kubernetes/services/order-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: ttl.sh/rbkr-ops-order-service-dev:2h
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
